style.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: sans-serif;
    background-color: #222;
    color: #ddd;
    letter-spacing: .03em;
    line-height: 1.4em;
    padding-inline: 2.5rem;
}

h1, h2, h3, h4 {
    line-height: 1.2em;
}

a {
    color: #3787c9;
}

a:visited {
    color: #be8ae9;
}

pre, code {
    background-color: #ddd;
    color: #444;
}

pre {
    padding: 1em;
    white-space: pre-wrap;
    text-align: left;
    margin-inline: 1.5em;
    overflow-x: scroll;
}

code {
    padding: .4em .3em .2em;
    font-size: 1.1em;
    white-space: nowrap;
}

img {
    width: 70%;
    height: auto;
    display: block;
    margin-inline: auto;
}

.note {
    font-style: italic;
    font-size: .9em;
}

main.article>p:first-of-type {
    font-weight: bold;
    font-style: italic;
}

.tag-container {
    margin: 1.2em 1em;
}

.tag {
    display: inline-block;
    background-color: #444;
    padding: .3em .7em;
    margin: .4em .2em;
    white-space: nowrap;
    font-size: .9em;
}

#tag-list>.tag {
    cursor: pointer;
}

.tag.selected {
    background-color: #666;
}

.hidden {
    display: none;
}

